tests/snapshots/snapshots__pipeline@list.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/list.pr
---
== tokens ==
VOpen Type UIdent("List") LParen Ident("a") RParen Eq UIdent("Nil") Bar UIdent("Cons") LParen Ident("a") Comma UIdent("List") LParen Ident("a") RParen RParen VSemi Fn Ident("length") LParen Ident("xs") RParen Eq VOpen Match Ident("xs") Of VOpen UIdent("Nil") FatArrow Int(IntLit { value: 0, suffix: None }) VSemi UIdent("Cons") LParen Ident("x") Comma Ident("rest") RParen FatArrow Int(IntLit { value: 1, suffix: None }) Plus Ident("length") LParen Ident("rest") RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("length") LParen UIdent("Cons") LParen Int(IntLit { value: 1, suffix: None }) Comma UIdent("Cons") LParen Int(IntLit { value: 2, suffix: None }) Comma UIdent("Cons") LParen Int(IntLit { value: 3, suffix: None }) Comma UIdent("Nil") RParen RParen RParen RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "List",
            params: [
                "a",
            ],
            ctors: [
                Ctor {
                    name: "Nil",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "Cons",
                    args: [
                        Var(
                            "a",
                        ),
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..37,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "length",
            params: [
                Param {
                    name: "xs",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "xs",
                        ),
                        span: 63..65,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Nil",
                                    [],
                                ),
                                span: 73..76,
                            },
                            body: Spanned {
                                node: Int(
                                    IntLit {
                                        value: 0,
                                        suffix: None,
                                    },
                                ),
                                span: 80..81,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Cons",
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 91..92,
                                        },
                                        Spanned {
                                            node: Var(
                                                "rest",
                                            ),
                                            span: 94..98,
                                        },
                                    ],
                                ),
                                span: 86..99,
                            },
                            body: Spanned {
                                node: Bin(
                                    Add,
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 103..104,
                                    },
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "length",
                                                ),
                                                span: 107..113,
                                            },
                                            [
                                                Spanned {
                                                    node: Var(
                                                        "rest",
                                                    ),
                                                    span: 114..118,
                                                },
                                            ],
                                        ),
                                        span: 107..119,
                                    },
                                ),
                                span: 103..119,
                            },
                        },
                    ],
                ),
                span: 57..119,
            },
            wheres: [],
            span: 39..119,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 133..140,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "length",
                                    ),
                                    span: 141..147,
                                },
                                [
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "Cons",
                                                ),
                                                span: 148..152,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 153..154,
                                                },
                                                Spanned {
                                                    node: Call(
                                                        Spanned {
                                                            node: Var(
                                                                "Cons",
                                                            ),
                                                            span: 156..160,
                                                        },
                                                        [
                                                            Spanned {
                                                                node: Int(
                                                                    IntLit {
                                                                        value: 2,
                                                                        suffix: None,
                                                                    },
                                                                ),
                                                                span: 161..162,
                                                            },
                                                            Spanned {
                                                                node: Call(
                                                                    Spanned {
                                                                        node: Var(
                                                                            "Cons",
                                                                        ),
                                                                        span: 164..168,
                                                                    },
                                                                    [
                                                                        Spanned {
                                                                            node: Int(
                                                                                IntLit {
                                                                                    value: 3,
                                                                                    suffix: None,
                                                                                },
                                                                            ),
                                                                            span: 169..170,
                                                                        },
                                                                        Spanned {
                                                                            node: Var(
                                                                                "Nil",
                                                                            ),
                                                                            span: 172..175,
                                                                        },
                                                                    ],
                                                                ),
                                                                span: 164..176,
                                                            },
                                                        ],
                                                    ),
                                                    span: 156..177,
                                                },
                                            ],
                                        ),
                                        span: 148..178,
                                    },
                                ],
                            ),
                            span: 141..179,
                        },
                    ],
                ),
                span: 133..180,
            },
            wheres: [],
            span: 121..180,
        },
    ],
}

== types ==
length : forall a. (List(a)) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn length(xs) =
  return xs to t@0; case t@0 { Nil => return 0 | Cons(x, rest) => return 1 to t@2; return rest to t@1; length(t@1) to t@3; t@2 + t@3 }
fn main() =
  return 1 to t@4; return 2 to t@5; return 3 to t@6; return Nil to t@7; return Cons(t@6, t@7) to t@8; return Cons(t@5, t@8) to t@9; return Cons(t@4, t@9) to t@10; length(t@10) to t@11; print t@11 to t@12; print_nl

== fbip (rc) ==
fn length(xs) =
  return xs to t@0; case t@0 { Nil => drop t@0 to _; return 0 | Cons(x, rest) => dup rest to _; drop t@0 to _; return 1 to t@2; return rest to t@1; length(t@1) to t@3; t@2 + t@3 }
fn main() =
  return 1 to t@4; return 2 to t@5; return 3 to t@6; return Nil to t@7; return Cons(t@6, t@7) to t@8; return Cons(t@5, t@8) to t@9; return Cons(t@4, t@9) to t@10; length(t@10) to t@11; print t@11 to t@12; drop t@12 to _; print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

define i64 @prism_length.trmc(i64 %a0, i64 %a1) {
entry:
  %t0 = inttoptr i64 %a0 to ptr
  %0 = ptrtoint ptr %t0 to i64
  %1 = add i64 %0, 8
  %t1 = inttoptr i64 %1 to ptr
  %t2 = load i64, ptr %t1, align 8
  switch i64 %t2, label %b1 [
    i64 0, label %b2
    i64 1, label %b3
  ]

b2:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %a0)
  %t4 = and i64 1, %a1
  %t5 = and i64 %t4, 1
  %t6 = icmp eq i64 %t5, 1
  br i1 %t6, label %b4, label %b5

b3:                                               ; preds = %entry
  %2 = ptrtoint ptr %t0 to i64
  %3 = add i64 %2, 24
  %t16 = inttoptr i64 %3 to ptr
  %t17 = load i64, ptr %t16, align 8
  %4 = ptrtoint ptr %t0 to i64
  %5 = add i64 %4, 32
  %t18 = inttoptr i64 %5 to ptr
  %t19 = load i64, ptr %t18, align 8
  call void @prism_rc_inc(i64 %t19)
  call void @prism_rc_dec(i64 %a0)
  %t22 = and i64 %a1, 3
  %t23 = and i64 %t22, 1
  %t24 = icmp eq i64 %t23, 1
  br i1 %t24, label %b8, label %b9

b1:                                               ; preds = %entry
  unreachable

b4:                                               ; preds = %b2
  %t8 = ashr i64 %a1, 1
  %t9 = add i64 0, %t8
  %t10 = shl i64 %t9, 1
  %t11 = ashr i64 %t10, 1
  %t12 = icmp eq i64 %t11, %t9
  br i1 %t12, label %b7, label %b5

b5:                                               ; preds = %b4, %b2
  %t14 = call i64 @prism_rt_int_add(i64 1, i64 %a1)
  br label %b6

b7:                                               ; preds = %b4
  %t13 = or i64 %t10, 1
  br label %b6

b6:                                               ; preds = %b5, %b7
  %t15 = phi i64 [ %t13, %b7 ], [ %t14, %b5 ]
  call void @prism_rc_dec(i64 1)
  call void @prism_rc_dec(i64 %a1)
  ret i64 %t15

b8:                                               ; preds = %b3
  %t25 = ashr i64 %a1, 1
  %t27 = add i64 %t25, 1
  %t28 = shl i64 %t27, 1
  %t29 = ashr i64 %t28, 1
  %t30 = icmp eq i64 %t29, %t27
  br i1 %t30, label %b11, label %b9

b9:                                               ; preds = %b8, %b3
  %t32 = call i64 @prism_rt_int_add(i64 %a1, i64 3)
  br label %b10

b11:                                              ; preds = %b8
  %t31 = or i64 %t28, 1
  br label %b10

b10:                                              ; preds = %b9, %b11
  %t33 = phi i64 [ %t31, %b11 ], [ %t32, %b9 ]
  call void @prism_rc_dec(i64 %a1)
  call void @prism_rc_dec(i64 3)
  %t34 = musttail call i64 @prism_length.trmc(i64 %t19, i64 %t33)
  ret i64 %t34
}

declare void @prism_rc_dec(i64)

declare i64 @prism_rt_int_add(i64, i64)

declare void @prism_rc_inc(i64)

define i64 @prism_length(i64 %a0) {
entry:
  %t0 = call i64 @prism_length.trmc(i64 %a0, i64 1)
  ret i64 %t0
}

define i64 @prism_main() {
entry:
  %t0 = call ptr @prism_alloc(i64 0)
  %0 = ptrtoint ptr %t0 to i64
  %1 = add i64 %0, 8
  %t1 = inttoptr i64 %1 to ptr
  store i64 0, ptr %t1, align 8
  %t2 = ptrtoint ptr %t0 to i64
  %t3 = call ptr @prism_alloc(i64 2)
  %2 = ptrtoint ptr %t3 to i64
  %3 = add i64 %2, 8
  %t4 = inttoptr i64 %3 to ptr
  store i64 1, ptr %t4, align 8
  %4 = ptrtoint ptr %t3 to i64
  %5 = add i64 %4, 24
  %t5 = inttoptr i64 %5 to ptr
  store i64 7, ptr %t5, align 8
  %6 = ptrtoint ptr %t3 to i64
  %7 = add i64 %6, 32
  %t6 = inttoptr i64 %7 to ptr
  store i64 %t2, ptr %t6, align 8
  %t7 = ptrtoint ptr %t3 to i64
  %t8 = call ptr @prism_alloc(i64 2)
  %8 = ptrtoint ptr %t8 to i64
  %9 = add i64 %8, 8
  %t9 = inttoptr i64 %9 to ptr
  store i64 1, ptr %t9, align 8
  %10 = ptrtoint ptr %t8 to i64
  %11 = add i64 %10, 24
  %t10 = inttoptr i64 %11 to ptr
  store i64 5, ptr %t10, align 8
  %12 = ptrtoint ptr %t8 to i64
  %13 = add i64 %12, 32
  %t11 = inttoptr i64 %13 to ptr
  store i64 %t7, ptr %t11, align 8
  %t12 = ptrtoint ptr %t8 to i64
  %t13 = call ptr @prism_alloc(i64 2)
  %14 = ptrtoint ptr %t13 to i64
  %15 = add i64 %14, 8
  %t14 = inttoptr i64 %15 to ptr
  store i64 1, ptr %t14, align 8
  %16 = ptrtoint ptr %t13 to i64
  %17 = add i64 %16, 24
  %t15 = inttoptr i64 %17 to ptr
  store i64 3, ptr %t15, align 8
  %18 = ptrtoint ptr %t13 to i64
  %19 = add i64 %18, 32
  %t16 = inttoptr i64 %19 to ptr
  store i64 %t12, ptr %t16, align 8
  %t17 = ptrtoint ptr %t13 to i64
  %t18 = call i64 @prism_length(i64 %t17)
  call void @prism_print_int(i64 %t18)
  call void @prism_rc_dec(i64 %t18)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

declare ptr @prism_alloc(i64)

declare void @prism_print_int(i64)

declare void @prism_print_nl()

== run ==
output: [3]
result: ()
